# kongfu

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: agent.rs  chatbot.rs  code_agent.rs  streaming_agent.rs  tool_macro.rs
kongfu-macros/: Cargo.toml
kongfu-macros/src/: lib.rs
kongfu-macros/tests/: tool_macro.rs
src/: agent.rs  error.rs  http_client.rs  lib.rs  memory.rs  message.rs  tool.rs
src/provider/: chatgpt.rs  mod.rs  ollama.rs  sse_stream.rs  types.rs  xai.rs  zai.rs
src/tooling/: edit_file.rs  list_directory.rs  mod.rs  read_file.rs
src/tools/: edit_file.rs  list_directory.rs  read_file.rs
