[package]
name = "kongfu"
version = "0.1.0"
edition = "2021"
description = "An LLM abstraction layer"

[dependencies]
async-trait = "0.1.89"
bytes = "1.11"
futures = "0.3.32"
futures-util = "0.3"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
uuid = {version = "1.22.0", features = ["v4", "serde"]}

[dev-dependencies]
mockall = "0.14.0"
