[workspace]
members = ["kongfu-macros"]
resolver = "2"

[package]
name = "kongfu"
version = "0.1.0"
edition = "2024"
description = "An LLM abstraction layer"

[dependencies]
kongfu-macros = { path = "kongfu-macros" }
async-trait = "0.1.89"
bytes = "1.11"
futures = "0.3.32"
futures-util = "0.3"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
uuid = {version = "1.23.0", features = ["v4", "serde"]}

[dev-dependencies]
mockall = "0.14.0"
tempfile = "3.27.0"

[workspace.lints.rust]
expect_used = "deny"
format_push_string = "deny"
multiple_unsafe_ops_per_block = "deny"
panic = "deny"
panic_in_result_fn = "deny"
string_lit_chars_any = "deny"
string_slice = "deny"
tests_outside_test_module = "deny"
todo = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
undocumented_unsafe_blocks = "deny"
