[package]
name = "kongfu-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for kongfu tool system"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "derive"] }

[dev-dependencies]
kongfu = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
